--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 <tr><td colspan="3">
 
 </td><td>
+2017年4月20日（木）<br>
+部活でホームページ作成1級を始める。<br><br>
 2017年4月11日（火）<br>
-部活でホームページ作成2級を始める。
-<br><br>
+部活でホームページ作成2級を始める。<br><br>
 2016年10月9日（日）<br>
 部活で日本情報処理検定(表計算)2級を取得する。
 </td><td>
