--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="author" content="Hibiki 314">
 <meta name="keywords" content="Hibiki 314 ホームページ, Hibiki 314, Hibiki314, ひびき 314, ひびき314">
 <title>Hibiki 314 ホームページ - トップページ</title>
-<link rel="shortcut icon" href="logo.png">
+<link rel="shortcut icon" href="logo.ico">
 <link href='index.css' rel='stylesheet'>
 </head><body>
 <table border="0">
