--- a/links.html
+++ b/links.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Copyright © 2017 Hibiki 314. All Rights Reserved.">
 <meta name="author" content="Hibiki 314">
 <title>Hibiki 314 ホームページ - リンク</title>
-<link rel="shortcut icon" href="logo.png">
+<link rel="shortcut icon" href="logo.ico">
 <link href='index.css' rel='stylesheet'>
 </head><body>
 <table border="0">
