--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
 <meta name="copyright" content="Copyright © 2017 Hibiki 314. All Rights Reserved.">
 <meta name="author" content="Hibiki 314">
 <title>Hibiki 314 ホームページ - 自己紹介</title>
-<link rel="shortcut icon" href="logo.ico">
+<link rel="shortcut icon" href="logo.png">
 <link href='index.css' rel='stylesheet'>
 </head><body>
 <table border="0">
@@ -26,7 +26,8 @@
 <tr><td class="a">誕生日</td><td class="a">2001年3月14日</td></tr>
 <tr><td class="a">住所</td><td class="a">日本</td></tr>
 <tr><td class="a">好物</td><td class="a">編集中</td></tr>
-<tr><td class="a">趣味</td><td>ゲーム(Minecraft PE、GTA: SA)</td></tr>
+<tr><td class="a">好きなゲーム</td><td><a href="app/mcpe.html" target="_blank">Minecraft PE</a>
+、<a href="app/gtasa.html" target="_blank">GTA: SA</a>、<a href="app/BattleshipEmpire.html" target="_blank">戦艦帝国</a>、<a href="app/asphalt8.html" target="_blank">アスファルト8</a></td></tr>
 <tr><td class="a">部活</td><td class="a">PC部（表計算：2級）</td></tr>
 </table>
 </body></html>
