--- a/mcpe.html
+++ b/mcpe.html
@@ -31,28 +31,28 @@
 </td></tr>
 <tr><td valign="top">
 <ol><li>
-<a href="https://www.dropbox.com/sh/yi78psrr6kucabr/AACch7l_VNtFuzAohj1evpc3a/world一覧/TNTの塊%2848000個%29.zip?dl=1">TNTの塊(48000個)</a></li><li>
-<a href="https://www.dropbox.com/sh/yi78psrr6kucabr/AAAYBsFXtanQereW1z1fC3uNa/world一覧/ピストンエレベーター.zip?dl=1">ピストンエレベーター </a></li><li>
-<a href="https://www.dropbox.com/sh/yi78psrr6kucabr/AAAPA-4NpZGxVVktEuzoxi3fa/world一覧/野比家.zip?dl=1">野比家</a></ol></li>
+<a href="https://goo.gl/bskQLF">TNTの塊(48000個)</a></li><li>
+<a href="https://goo.gl/xm8JiT">ピストンエレベーター </a></li><li>
+<a href="https://goo.gl/STZWmm">野比家</a></ol></li>
 </li></ol>
 </td>
 
 <td>
 <ol><li>
-<a href="https://www.dropbox.com/sh/yi78psrr6kucabr/AADglTDkhbXVRT-9_VHtGexwa/mod一覧/帯電クリーパーエッグmod.js?dl=1">帯電クリーパーエッグmod</a></li><li>
-<a href="https://www.dropbox.com/sh/yi78psrr6kucabr/AACW9UogDiwle2kG64uA1Wqca/mod一覧/インベントリに無い物追加mod.js?dl=1">インベントリに無い物追加mod</a></li><li>
-<a href="https://www.dropbox.com/sh/yi78psrr6kucabr/AADiAbcdW8zjnzETf23FYH6ka/mod一覧/サドルレシピ追加mod.js?dl=1">サドルレシピ追加mod</a></li><li>
-<a href="https://www.dropbox.com/sh/yi78psrr6kucabr/AAD7VoI28iEBSRdY_NPZwMema/mod一覧/fly%20mod.js?dl=1">fly mod</a></li><li>
-<a href="https://www.dropbox.com/sh/yi78psrr6kucabr/AAB4JQ-kQUuLeAprkgeDVRp4a/mod一覧/雷の杖%20mod.js?dl=1">雷の杖 mod</a></li><li>
-<a href="https://www.dropbox.com/sh/yi78psrr6kucabr/AAADoo5_2KkZ_55qp9hrqXI9a/mod一覧/difficulty%20mod.js?dl=1">difficulty mod</a></li><li>
-<a href="https://www.dropbox.com/sh/yi78psrr6kucabr/AABSfjr_PTtmiQAvaAUTYL-Da/mod一覧/gamespeed%20mod.js?dl=1">gamespeed mod</a></li><li>
-<a href="https://www.dropbox.com/s/wcljzg7lv3v7us2/DesnoGuns%20Mod%20r018%E5%AF%BE%E5%BF%9C%E3%82%AF%E3%83%AA%E3%82%A8%E3%81%A7%E3%83%96%E3%83%AD%E3%83%83%E3%82%AF%E7%A0%B4%E5%A3%8A%E3%82%92%E9%98%B2%E6%AD%A2%E3%81%99%E3%82%8Bmod.js?dl=1">DesnoGuns Mod対応<br>
+<a href="https://goo.gl/AS1VmB">帯電クリーパーエッグmod</a></li><li>
+<a href="https://goo.gl/14MqJt">インベントリに無い物追加mod</a></li><li>
+<a href="https://goo.gl/yqPdgf">サドルレシピ追加mod</a></li><li>
+<a href="https://goo.gl/oNHcCv">fly mod</a></li><li>
+<a href="https://goo.gl/RwH6qg">雷の杖 mod</a></li><li>
+<a href="https://goo.gl/WtTFjj">difficulty mod</a></li><li>
+<a href="https://goo.gl/2eojfR">gamespeed mod</a></li><li>
+<a href="https://goo.gl/WHM2iT">DesnoGuns Mod対応<br>
 長押しを剣と同じ効果にするmod</a></li></ol>
 </td>
 
 <td valign="top">
 <ol><li>
-<a href="https://www.dropbox.com/sh/yi78psrr6kucabr/AACHGAnfK2vNQxnSjAVdHg6_a/texture一覧/訳をPE➡PCテクスチャ.zip?dl=1">訳をPE➡PCテクスチャ</a></li></ol>
+<a href="https://goo.gl/aei7sn">訳をPE➡PCテクスチャ</a></li></ol>
 </td></tr>
 </table>
 </body></html>
