--- a/index.html
+++ b/index.html
@@ -33,4 +33,9 @@
 
 </td></tr>
 </table>
+アクセスカウンターテスト
+<!-- shinobi ct2 -->
+<script type="text/javascript" src="//ct2.shinobi.jp/sc/1734904"></script>
+<noscript><a href="//ct2.shinobi.jp/gg/1734904"><img src="//ct2.shinobi.jp/ll/1734904" border="0" alt="カウンター" /></a></noscript>
+<!-- /shinobi ct2 -->
 </body></html>
