--- a/app/asphalt8.html
+++ b/app/asphalt8.html
@@ -4,13 +4,17 @@ location.href = url;
 } 
 setTimeout("JumpPage()",0);
 window.onload = function(){ 	
-var ua = window.navigator.userAgent.toLowerCase(); 	 	if(ua.indexOf('android') > 0){ 		
+var ua = window.navigator.userAgent.toLowerCase(); 	 	
+if(ua.indexOf('android') > 0){ 		
 url = "https://play.google.com/store/apps/details?id=com.gameloft.android.ANMP.GloftA8HM"; 	
 }else 
 if(ua.indexOf('iphone') > 0 || 			
 ua.indexOf('ipad') > 0 || 			
 ua.indexOf('ipod') > 0 ){ 		
-url = "https://itunes.apple.com/jp/app/id610391947?mt=8"; 	
+url = "https://itunes.apple.com/jp/app/id610391947?mt=8";
+}else 
+if(ua.indexOf('windows') > 0 ){ 		
+url = "https://www.microsoft.com/ja-jp/store/p/アスファルト8-airborne/9wzdncrfj26j";
 }
 }
 </script>
