IEに対応させました

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="shortcut icon" href="logo.ico">
 <link rel="stylesheet" href="css/material.min.css">
 <script src="js/material.min.js"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="css/material-icon.css">
 <link rel="stylesheet" href="css/min-601px.css">
 <link rel="stylesheet" href="css/max-600px.css">
