IEに対応させました。

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 <tr><td>
 
 </td><td>
+2018年4月28日（土）<br>
+ハンバーガーメニューがIEでも表示されるようにしました。
+<br><br>
 2018年4月27日（金）<br>
 ホームページをマテリアルデザインに変更。
 <br><br>
