誤字の修正

--- a/mcbe.html
+++ b/mcbe.html
@@ -51,7 +51,7 @@
         <section class="mdl-layout__tab-panel is-active">
             <div class="page-content">
                 <p>
-<h2>MCPE</h2>
+<h2>MCBE</h2>
 ここにはMinecraft PEで使えるワールドやModやテクスチャを載せます。
 <hr>
 <table border="0" id="mcpe-l">
