--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 2018年4月27日（金）<br>
 ホームページをマテリアルデザインに変更。
 <br><br>
+2017年4月20日（木）<br>
+部活でホームページ作成1級を始める。
+<br><br>
 2017年4月11日（火）<br>
 部活でホームページ作成2級を始める。
 <br><br>
