--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <nav class="mdl-navigation">
 <a class="mdl-navigation__link" href="https://plus.google.com/101525237720369236566">Google+</a>
 <a class="mdl-navigation__link" href="https://m.youtube.com/channel/UCCykZDNLGGKPa7z_T2WHi3w">YouTube</a>
-<a class="mdl-navigation__link" href="https://github.com/hibiki314">Github</a>
+<a class="mdl-navigation__link" href="https://github.com/hibiki314">GitHub</a>
 <a class="mdl-navigation__link" href="https://getmdl.io">Material Design Lite</a>
 </nav>
 </div>
