--- a/mcbe.html
+++ b/mcbe.html
@@ -5,17 +5,15 @@
 <meta name="theme-color" content="#3F51B5">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 <meta name="robots" content="noindex,nofollow,noarchive">
-<meta name="copyright" content="Copyright © 2017 Hibiki 314. All Rights Reserved.">
+<meta name="copyright" content="Copyright © 2017-2018 Hibiki 314. All Rights Reserved.">
 <meta name="author" content="Hibiki 314">
-<meta name="keywords" content="Hibiki 314 ホームページ,Hibiki314ホームページ, Hibiki 314, Hibiki314, ひびき 314 ホームページ, ひびき314">
 <title>Hibiki 314 ホームページ - MCBE</title>
 <link rel="shortcut icon" href="logo.ico">
 <link rel="stylesheet" href="css/material.min.css">
-<script src="js/material.min.js"></script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="css/material-icon.css">
 <link rel="stylesheet" href="css/min-601px.css">
 <link rel="stylesheet" href="css/max-600px.css">
+<script src="js/material.min.js"></script>
 </head>
 <body>
 
@@ -31,8 +29,8 @@
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
             <a href="index.html" class="mdl-layout__tab">トップ</a>
             <a href="profile.html" class="mdl-layout__tab">自己紹介</a>
-            <a href="mcbe.html" class="mdl-layout__tab is-active">MCBE</a>
-            <a href="myapp.html" class="mdl-layout__tab">自作アプリ</a>
+            <a href="sakusei.html" class="mdl-layout__tab">作成物</a>
+<a href="login.html" class="mdl-layout__tab">ログイン</a>
         <!-- / .mdl-layout__tab-bar mdl-js-ripple-effect --></div>
     </header>
     
@@ -51,7 +49,8 @@
         <section class="mdl-layout__tab-panel is-active">
             <div class="page-content">
                 <p>
-<h2>MCBE</h2>
+<noscript>JavaScriptを有効にして下さい。</noscript>
+<h2>MCPE</h2>
 ここにはMinecraft PEで使えるワールドやModやテクスチャを載せます。
 <hr>
 <table border="0" id="mcpe-l">
