--- a/profile.html
+++ b/profile.html
@@ -5,17 +5,16 @@
 <meta name="theme-color" content="#3F51B5">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 <meta name="robots" content="noindex,nofollow,noarchive">
-<meta name="copyright" content="Copyright © 2017 Hibiki 314. All Rights Reserved.">
+<meta name="copyright" content="Copyright © 2017-2018 Hibiki 314. All Rights Reserved.">
 <meta name="author" content="Hibiki 314">
-<meta name="keywords" content="Hibiki 314 ホームページ,Hibiki314ホームページ, Hibiki 314, Hibiki314, ひびき 314 ホームページ, ひびき314">
 <title>Hibiki 314 ホームページ - 自己紹介</title>
 <link rel="shortcut icon" href="logo.ico">
 <link rel="stylesheet" href="css/material.min.css">
-<script src="js/material.min.js"></script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="css/material-icon.css">
 <link rel="stylesheet" href="css/min-601px.css">
 <link rel="stylesheet" href="css/max-600px.css">
+<script src="js/material.min.js"></script>
+<script src="js/age.js"></script>
 </head>
 <body>
 
@@ -31,8 +30,8 @@
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
             <a href="index.html" class="mdl-layout__tab">トップ</a>
             <a href="profile.html" class="mdl-layout__tab is-active">自己紹介</a>
-            <a href="mcbe.html" class="mdl-layout__tab">MCBE</a>
-            <a href="myapp.html" class="mdl-layout__tab">自作アプリ</a>
+            <a href="sakusei.html" class="mdl-layout__tab">作成物</a>
+<a href="login.html" class="mdl-layout__tab">ログイン</a>
         <!-- / .mdl-layout__tab-bar mdl-js-ripple-effect --></div>
     </header>
     
@@ -51,17 +50,30 @@
         <section class="mdl-layout__tab-panel is-active">
             <div class="page-content">
                 <p>
+<noscript>JavaScriptを有効にして下さい。</noscript>
 <h2>自己紹介</h2>
 <table class="a" border="1">
 <tr><td class="a">名前</td><td>Hibiki 314</td></tr>
-<tr><td class="a">年齢</td><td class="a">17歳</td></tr>
+<tr><td class="a">年齢</td><td class="a"><script>age(20010314)</script>歳</td></tr>
 <tr><td class="a">誕生日</td><td class="a">2001年3月14日</td></tr>
 <tr><td class="a">住所</td><td class="a">日本</td></tr>
 <tr><td class="a">好物</td><td class="a">飯よりもパン派</td></tr>
-<tr><td class="a">好きなゲーム</td><td><a href="app/mcpe.html" target="_blank">Minecraft</a>
+<tr><td class="a">好きなゲーム</td><td><a href="app/mcbe.html" target="_blank">Minecraft統合版</a>
 、<a href="app/gtasa.html" target="_blank">GTA: SA</a>、<a href="app/BattleshipEmpire.html" target="_blank">戦艦帝国</a>、<a href="app/asphalt8.html" target="_blank">アスファルト8</a></td></tr>
 <tr><td class="a">好きなこと</td><td class="a">プログラミング（HTML、CSS、JavaScript）</td></tr>
-<tr><td class="a">部活</td><td class="a">PC部（表計算：2級）</td></tr>
+<tr><td class="a">部活</td><td class="a">パソコン部</td></tr>
+<tr><td>
+資格
+</td><td class="a">
+日本情報処理検定協会主催<br>
+情報処理技能検定 表計算 2級 (平成28年取得)<br>
+ホームページ作成検定試験 1級 (取得予定)<br>
+日本語ワープロ検定試験 2級 (取得予定)<br>
+文書デザイン検定試験 2級 (取得予定)<br>
+プレゼンテーション作成検定試験 2級 (取得予定)<br>
+<br>
+剣道 4級 (平成25年取得)
+</td></tr>
 </table>
 </p>
             <!-- / .page-content --></div>
