--- a/not-support.html
+++ b/not-support.html
@@ -4,10 +4,10 @@
 <meta charset="UTF-8">
 <meta name="theme-color" content="#3F51B5">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+<meta name="robots" content="noindex,nofollow,noarchive">
 <meta name="copyright" content="Copyright © 2017-2018 Hibiki 314. All Rights Reserved.">
 <meta name="author" content="Hibiki 314">
-<meta name="keywords" content="Hibiki 314 ホームページ,Hibiki314ホームページ, Hibiki 314, Hibiki314, ひびき 314 ホームページ, ひびき314">
-<title>Hibiki 314 ホームページ - トップページ</title>
+<title>Hibiki 314 ホームページ - サポートされていません</title>
 <link rel="shortcut icon" href="logo.ico">
 <link rel="stylesheet" href="css/material.min.css">
 <link rel="stylesheet" href="css/material-icon.css">
@@ -27,7 +27,7 @@
     
         <!-- Tabs -->
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-            <a href="index.html" class="mdl-layout__tab is-active">トップ</a>
+            <a href="index.html" class="mdl-layout__tab">トップ</a>
             <a href="profile.html" class="mdl-layout__tab">自己紹介</a>
             <a href="sakusei.html" class="mdl-layout__tab">作成物</a>
 <a href="login.html" class="mdl-layout__tab">ログイン</a>
@@ -49,21 +49,10 @@
         <section class="mdl-layout__tab-panel is-active">
             <div class="page-content">
                 <p>
-<noscript>JavaScriptを有効にして下さい。</noscript>
-<h2>トップページ</h2>
+<h2>サポートされていません</h2>
 <table border="0">
 <tr><td>
-
-</td><td>
-2018年4月27日（金）<br>
-ホームページをマテリアルデザインに変更。
-<br><br>
-2017年4月11日（火）<br>
-部活でホームページ作成2級を始める。
-<br><br>
-2016年10月9日（日）<br>
-部活で日本情報処理検定(表計算)2級を取得する。
-</td><td>
+お使いのデバイス機器はサポートされていません。
 
 </td></tr>
 </table>
