--- a/app/mcbe.html
+++ b/app/mcbe.html
@@ -1,17 +1,20 @@
 <script>
-function JumpPage() { 	
-location.href = url; 
-} 
+function JumpPage() {
+location.href = url;
+}
 setTimeout("JumpPage()",0);
 window.onload = function(){
 var ua = window.navigator.userAgent.toLowerCase();
 if(ua.indexOf('android') > 0){
-url = "https://play.google.com/store/apps/details?id=com.sincetimes.games.worldship.google.jp.normal";
-}else
+url = "https://play.google.com/store/apps/details?id=com.mojang.minecraftpe"; 
+}else 
 if(ua.indexOf('iphone') > 0 ||
 ua.indexOf('ipad') > 0 ||
 ua.indexOf('ipod') > 0 ){
-url = "https://itunes.apple.com/jp/app/id954205285?mt=8";
+url = "https://itunes.apple.com/jp/app/id479516143?mt=8";
+}else
+if(ua.indexOf('windows') > 0 ){
+url = "";
 }else
 url = "../not-support.html";
 }
