--- a/profile.html
+++ b/profile.html
@@ -60,7 +60,7 @@
 <tr><td class="a">好物</td><td class="a">飯よりもパン派</td></tr>
 <tr><td class="a">好きなゲーム</td><td><a href="app/mcbe.html" target="_blank">Minecraft統合版</a>
 、<a href="app/gtasa.html" target="_blank">GTA: SA</a>、<a href="app/BattleshipEmpire.html" target="_blank">戦艦帝国</a>、<a href="app/asphalt8.html" target="_blank">アスファルト8</a></td></tr>
-<tr><td class="a">好きなこと</td><td class="a">プログラミング（HTML、CSS、JavaScript）</td></tr>
+<tr><td class="a">好きなこと</td><td class="a">プログラミング（HTML、CSS、JavaScript）、ノートPCの改造</td></tr>
 <tr><td class="a">部活</td><td class="a">パソコン部</td></tr>
 <tr><td>
 資格
