--- a/myapp.html
+++ b/myapp.html
@@ -5,7 +5,7 @@
 <meta name="theme-color" content="#3F51B5">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 <meta name="robots" content="noindex,nofollow,noarchive">
-<meta name="copyright" content="Copyright © 2017-2018 Hibiki 314. All Rights Reserved.">
+<meta name="copyright" content="Copyright © 2017-2019 Hibiki 314. All Rights Reserved.">
 <meta name="author" content="Hibiki 314">
 <title>Hibiki 314 ホームページ - 自作アプリ</title>
 <link rel="shortcut icon" href="logo.ico">
@@ -38,7 +38,7 @@
         <span class="mdl-layout-title">リンク</span>
     <!-- / .mdl-layout__drawer -->
 <nav class="mdl-navigation">
-<a class="mdl-navigation__link" href="https://plus.google.com/101525237720369236566">Google+</a>
+<a class="mdl-navigation__link" href="inquiry.html">問い合わせ</a>
 <a class="mdl-navigation__link" href="https://m.youtube.com/channel/UCCykZDNLGGKPa7z_T2WHi3w">YouTube</a>
 <a class="mdl-navigation__link" href="https://github.com/hibiki314">GitHub</a>
 <a class="mdl-navigation__link" href="https://getmdl.io">Material Design Lite</a>
