Twitterアカウントの追加

--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
@@ -38,12 +38,13 @@
     <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">リンク</span>
     <!-- / .mdl-layout__drawer -->
-<nav class="mdl-navigation">
-<a class="mdl-navigation__link" href="inquiry.html">問い合わせ</a>
-<a class="mdl-navigation__link" href="https://m.youtube.com/channel/UCCykZDNLGGKPa7z_T2WHi3w">YouTube</a>
-<a class="mdl-navigation__link" href="https://github.com/hibiki314">GitHub</a>
-<a class="mdl-navigation__link" href="https://getmdl.io">Material Design Lite</a>
-</nav>
+        <nav class="mdl-navigation">
+            <a class="mdl-navigation__link" href="inquiry.html">問い合わせ</a>
+            <a class="mdl-navigation__link" href="https://twitter.com/314_Hibiki?s=09">Twitter(@314_hibiki)</a>
+            <a class="mdl-navigation__link" href="https://m.youtube.com/channel/UCCykZDNLGGKPa7z_T2WHi3w">YouTube</a>
+            <a class="mdl-navigation__link" href="https://github.com/hibiki314">GitHub</a>
+            <a class="mdl-navigation__link" href="https://getmdl.io">Material Design Lite</a>
+        </nav>
 </div>
 
     <main class="mdl-layout__content">
